--- a/app/src/main/res/navigation/mobile_navigation.xml
+++ b/app/src/main/res/navigation/mobile_navigation.xml
@@ -34,4 +34,9 @@
         android:name="com.example.bws.ui.settings.SettingsFragment"
         android:label="@string/title_settings"
         tools:layout="@layout/fragment_settings" />
+    <fragment
+        android:id="@+id/navigation_capture"
+        android:name="com.example.bws.ui.sightings.capture.CaptureFragment"
+        android:label="@string/create_my_sighting"
+        tools:layout="@layout/fragment_capture" />
 </navigation>
