--- a/app/src/main/res/layout/activity_login.xml
+++ b/app/src/main/res/layout/activity_login.xml
@@ -57,6 +57,12 @@
         android:layout_marginTop="50dp"
         android:background="@drawable/text_input"
         android:text="@string/nav_register" />
+    <!-- ProgressBar for loading animation -->
+    <ProgressBar
+        android:id="@+id/progressBar"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
 
+        android:visibility="gone" />
 
 </LinearLayout>
