--- a/app/src/main/res/layout/fragment_home.xml
+++ b/app/src/main/res/layout/fragment_home.xml
@@ -2,17 +2,18 @@
 
 <ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
-    xmlns:tools="http://schemas.android.com/tools"
+
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context=".ui.home.HomeFragment">
+   >
 <LinearLayout
     android:layout_width="match_parent"
     android:layout_height="wrap_content"
 
     android:gravity="center"
     android:orientation="vertical"
-    android:padding="16dp">
+    android:padding="16dp"
+    android:layout_margin="15dp">
     <TextView
         android:id="@+id/text_home"
         android:layout_width="match_parent"
@@ -21,7 +22,7 @@
         android:layout_marginTop="8dp"
         android:layout_marginEnd="8dp"
         android:text="@string/app_name"
-
+        android:textColor="@color/green_700"
         android:textAlignment="center"
         android:textSize="28sp"
         android:textStyle="bold" />
@@ -32,24 +33,16 @@
         android:layout_width="wrap_content"
         android:layout_height="272dp"
 
-        app:srcCompat="@drawable/appstore"
+        app:srcCompat="@drawable/home_logo"
         android:contentDescription="@string/app_logo" />
 
     <Button
-        android:id="@+id/button1"
+        android:id="@+id/create"
         android:layout_width="120dp"
         android:layout_height="120dp"
         android:layout_margin="18dp"
         android:background="@drawable/custom_button"
         android:text="@string/create_my_sighting" />
-
-    <Button
-        android:id="@+id/button2"
-        android:layout_width="120dp"
-        android:layout_height="120dp"
-        android:layout_margin="18dp"
-        android:background="@drawable/custom_button"
-        android:text="Create My Sighting" />
 
 </LinearLayout>
 
