--- a/app/src/main/res/layout/sighting_list_items.xml
+++ b/app/src/main/res/layout/sighting_list_items.xml
@@ -30,10 +30,10 @@
         <TextView
             android:id="@+id/sighting_name"
             android:layout_width="match_parent"
-            android:layout_height="65dp"
+            android:layout_height="wrap_content"
             android:textAppearance="?attr/textAppearanceListItem"
             android:textColor="@color/green_500"
-
+            android:textAlignment="center"
             android:textSize="24sp" />
     </LinearLayout>
 
@@ -56,8 +56,9 @@
 
         <TextView
             android:id="@+id/date_seen"
+            android:textAlignment="center"
             android:layout_width="match_parent"
-            android:layout_height="65dp"
+            android:layout_height="wrap_content"
             android:textAppearance="?attr/textAppearanceListItem"
             android:textColor="@color/green_500"
             android:textSize="24sp" />
@@ -83,8 +84,8 @@
         <TextView
             android:id="@+id/locName"
             android:layout_width="match_parent"
-            android:layout_height="65dp"
-
+            android:layout_height="wrap_content"
+            android:textAlignment="center"
             android:textAppearance="?attr/textAppearanceListItem"
             android:textColor="@color/green_500"
             android:textSize="24sp" />
